<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="20sp"
            android:textColor="@color/lavender"
            android:layout_marginBottom="1dp" />

        <!-- Notification Setting -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/notification_icon"
                android:src="@drawable/ic_notification" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/notification"
                android:textColor="@color/lavender" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>
        </LinearLayout>

        <!-- Appearance Setting -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_appearance"
                android:contentDescription="@string/appearance_icon"
                android:layout_marginEnd="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/lavender"
                android:text="@string/appearance" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_dark_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>
        </LinearLayout>

        <!-- Feedback Setting -->
        <TextView
            android:id="@+id/feedback_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_feedback"
            android:drawablePadding="16dp"
            android:padding="16dp"
            android:text="@string/feedback"
            android:textColor="@color/lavender"
            android:gravity="center_vertical"
            android:clickable="true" />

        <!-- Share App Setting -->
        <TextView
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_share_24"
            android:drawablePadding="16dp"
            android:padding="16dp"
            android:text="@string/share_app"
            android:textColor="@color/lavender"
            android:gravity="center_vertical"
            android:clickable="true" />

        <!-- Logout Button -->
        <TextView
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_logout_24"
            android:drawablePadding="16dp"
            android:padding="16dp"
            android:text="@string/Logout"
            android:textColor="@color/lavender"
            android:gravity="center_vertical"
            android:clickable="true" />

    </LinearLayout>
</ScrollView>
